k8s/green/appointment-scheduling-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: appointment-scheduling-green
  labels:
    app: appointment-scheduling
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-scheduling
      version: green
  template:
    metadata:
      labels:
        app: appointment-scheduling
        version: green
    spec:
      containers:
        - name: appointment-scheduling
          image: 061051254585.dkr.ecr.us-east-1.amazonaws.com/appointment-scheduling:<unique-tag>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
