k8s/green/file-handler-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: file-handler-green
  labels:
    app: file-handler
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-handler
      version: green
  template:
    metadata:
      labels:
        app: file-handler
        version: green
    spec:
      containers:
        - name: file-handler
          image: file-handler:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
