k8s/green/medi-track-gateway-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: medi-track-gateway-green
  labels:
    app: medi-track-gateway
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medi-track-gateway
      version: green
  template:
    metadata:
      labels:
        app: medi-track-gateway
        version: green
    spec:
      containers:
        - name: medi-track
          image: 061051254585.dkr.ecr.us-east-1.amazonaws.com/medi-track-gateway:<unique-tag>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
