k8s/green/notification-service-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service-green
  labels:
    app: notification-service
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
      version: green
  template:
    metadata:
      labels:
        app: notification-service
        version: green
    spec:
      containers:
        - name: notification
          image: notification:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4003
