k8s/green/patient-record-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: patient-record-green
  labels:
    app: patient-record
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-record
      version: green
  template:
    metadata:
      labels:
        app: patient-record
        version: green
    spec:
      containers:
        - name: patient-record-service
          image: patient-record-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
