k8s/green/appointment-scheduling-service-green.yaml
# appointment-scheduling-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: appointment-scheduling-green
spec:
  selector:
    app: appointment-scheduling
    version: green
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
