k8s/green/file-handler-service-green.yaml
# file-handler-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: file-handler-green
spec:
  selector:
    app: file-handler
    version: green
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
