k8s/green/patient-record-service-green.yaml
# patient-record-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: patient-record-green
spec:
  selector:
    app: patient-record
    version: green
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
